Started my matrix part of the MathsLibrary. Have Transposes working and tested in console output

--- a/MathLibrary.vcxproj.filters
+++ b/MathLibrary.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Vectors.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Matrices.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Vectors.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Matrices.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
